[gd_scene load_steps=8 format=3 uid="uid://b2u21yn8ebgoj"]

[ext_resource type="Script" uid="uid://b6l6aatbjgod" path="res://Tests/turn_tracker_test.gd" id="1_f2n0q"]
[ext_resource type="PackedScene" uid="uid://dugpl3du3i6xo" path="res://Scenes/Dice/dice_hand.tscn" id="2_37dk1"]
[ext_resource type="PackedScene" uid="uid://c6k045mexxkyd" path="res://Scenes/Dice/dice.tscn" id="3_c7m8t"]
[ext_resource type="PackedScene" uid="uid://bsukvul4wop20" path="res://Scenes/ScoreCard/score_card.tscn" id="4_rtbcn"]
[ext_resource type="PackedScene" uid="uid://sliaarrkymdo" path="res://Scenes/UI/score_card_ui.tscn" id="5_p4wka"]
[ext_resource type="PackedScene" uid="uid://df1otdcd66xb5" path="res://Scenes/UI/turn_tracker_ui.tscn" id="6_37dk1"]
[ext_resource type="PackedScene" uid="uid://b8limy63m2tlo" path="res://Scenes/Tracker/turn_tracker.tscn" id="7_c7m8t"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_f2n0q")

[node name="DiceHand" parent="." instance=ExtResource("2_37dk1")]
dice_scene = ExtResource("3_c7m8t")

[node name="RollButton" type="Button" parent="."]
offset_left = 14.0
offset_top = 133.0
offset_right = 22.0
offset_bottom = 141.0
text = "ROLL"

[node name="DiceContainer" type="Node2D" parent="."]

[node name="ScoreCard" parent="." instance=ExtResource("4_rtbcn")]

[node name="ScoreCardUI" parent="." instance=ExtResource("5_p4wka")]
offset_left = 854.0
offset_top = 16.0
offset_right = 894.0
offset_bottom = 43.0

[node name="TurnTrackerUI" parent="." instance=ExtResource("6_37dk1")]
offset_left = 17.0
offset_top = 262.0
offset_right = 17.0
offset_bottom = 262.0

[node name="TurnTracker" parent="." instance=ExtResource("7_c7m8t")]

[node name="NextTurnButton" type="Button" parent="."]
offset_left = 13.0
offset_top = 60.0
offset_right = 99.0
offset_bottom = 91.0
text = "Next Turn"

[connection signal="pressed" from="RollButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="NextTurnButton" to="." method="_on_next_turn_button_pressed"]
